safe-discriminant/tests/fail/missing_repr.rs
use safe_discriminant::Discriminant;

#[derive(Discriminant)]
pub enum Foo {
    A = 0,
    B = 1,
}

fn main() {}
