safe-discriminant/tests/fail/missing_repr.stderr
error: Discriminant requires a `#[repr(x)] where x is one of u8, i8, u16, i16, u32, i32, u64, i64.
 --> tests/fail/missing_repr.rs:4:10
  |
4 | pub enum Foo {
  |          ^^^
